# dissertacao

./: .gitignore  download_overturemaps_data.ipynb  isocrona.ipynb  isocronas.ipynb  isocronas_osmnx.ipynb  networkAnalysis_city2graph.ipynb  pyproject.toml  vias.ipynb
dados/overturemaps/: isocronas_hospitais_resultado.gpkg  teresina_zonaurbana_connector.parquet
dados/overturemaps/resultado/: isocronas_ubs_zu.geojson  isocronas_ubs_zu9.geojson
dados/zona_urbana/: area_estudo_buffer3km_zu_utm.geojson  area_estudo_zu.geojson  area_estudo_zu.qmd  area_estudo_zu_buffer3km.geojson
