[project]
name = "dissertacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "geopandas>=1.1.1",
    "jupyterlab>=4.4.9",
    "leafmap>=0.52.4",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pyogrio>=0.11.1",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
]
