[project]
name = "dissertacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "city2graph[cu128]>=0.1.6",
    "contextily>=1.6.2",
    "duckdb>=1.4.1",
    "duckdb-engine>=0.17.0",
    "geopandas>=1.1.1",
    "jupysql>=0.11.1",
    "jupyterlab>=4.4.9",
    "leafmap>=0.52.4",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyogrio>=0.11.1",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
